[gd_scene load_steps=21 format=2]

[ext_resource path="res://menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/buttons/button1.png" type="Texture" id=2]
[ext_resource path="res://Assets/buttons/button_hover.png" type="Texture" id=3]
[ext_resource path="res://Assets/buttons/button_clicked.png" type="Texture" id=4]
[ext_resource path="res://Assets/Pixellari.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/shaders/bright_shader.gdshader" type="Shader" id=6]
[ext_resource path="res://Assets/background.png" type="Texture" id=7]

[sub_resource type="ShaderMaterial" id=20]
shader = ExtResource( 6 )
shader_param/shine_color = Color( 0, 1, 0.976471, 1 )
shader_param/line_width = 0.1
shader_param/angle = 1.0472
shader_param/speed = 1.0
shader_param/wait_cycles = 0.5

[sub_resource type="DynamicFont" id=14]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxTexture" id=21]

[sub_resource type="StyleBoxTexture" id=22]

[sub_resource type="Gradient" id=24]
offsets = PoolRealArray( 0, 0.486034, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 0 )

[sub_resource type="GradientTexture2D" id=25]
gradient = SubResource( 24 )

[sub_resource type="StyleBoxTexture" id=23]
texture = SubResource( 25 )
region_rect = Rect2( 0, 0, 64, 64 )
margin_top = 3.90399

[sub_resource type="DynamicFont" id=19]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 128, 32 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 128, 32 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 128, 32 )

[sub_resource type="DynamicFont" id=13]
size = 80
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="ShaderMaterial" id=18]
shader = ExtResource( 6 )
shader_param/shine_color = Color( 0.0862745, 0.682353, 0.878431, 1 )
shader_param/line_width = 0.1
shader_param/angle = 0.7854
shader_param/speed = 1.0
shader_param/wait_cycles = 1.0

[node name="menu" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BlackLines" type="Node" parent="CanvasLayer"]

[node name="Background" type="Sprite" parent="CanvasLayer/BlackLines"]
position = Vector2( 245, 628 )
scale = Vector2( 2.01, 2.09 )
texture = ExtResource( 7 )

[node name="Start_Shader" type="Button" parent="CanvasLayer"]
self_modulate = Color( 0, 1, 0.976471, 1 )
material = SubResource( 20 )
margin_left = 42.0
margin_top = 217.0
margin_right = 282.0
margin_bottom = 257.0
custom_fonts/font = SubResource( 14 )
text = "CLIQUE PRA COMEÇAR"

[node name="Start_Game" type="Button" parent="CanvasLayer"]
margin_left = 42.0
margin_top = 217.0
margin_right = 282.0
margin_bottom = 257.0
custom_fonts/font = SubResource( 14 )
custom_styles/hover = SubResource( 21 )
custom_styles/pressed = SubResource( 22 )
custom_styles/normal = SubResource( 23 )
text = "CLIQUE PRA COMEÇAR"

[node name="Load_Shader" type="Button" parent="CanvasLayer"]
margin_left = 616.0
margin_top = 217.0
margin_right = 856.0
margin_bottom = 257.0
custom_fonts/font = SubResource( 19 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "CLIQUE PRA CARREGAR"

[node name="Load_Game" type="Button" parent="CanvasLayer"]
margin_left = 616.0
margin_top = 217.0
margin_right = 856.0
margin_bottom = 257.0
custom_fonts/font = SubResource( 19 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "CLIQUE PRA CARREGAR"

[node name="Label2" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -298.0
margin_top = 50.0
margin_right = 142.0
margin_bottom = 130.0
custom_fonts/font = SubResource( 13 )
text = "ShapeStylist"

[node name="Label" type="Label" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0.317647 )
material = SubResource( 18 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -299.0
margin_top = 51.0
margin_right = 141.0
margin_bottom = 131.0
custom_fonts/font = SubResource( 13 )
text = "ShapeStylist"

[connection signal="pressed" from="CanvasLayer/Start_Shader" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/Start_Game" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/Load_Shader" to="." method="_on_Load_Game_pressed"]
[connection signal="pressed" from="CanvasLayer/Load_Game" to="." method="_on_Load_Game_pressed"]
